Some fix for critical issues (inefficent Number constructor)